<resources>
    <string name="app_name">School-Softdesign</string>
    <string name="blue_button">Blue</string>
    <string name="red_button">Red</string>
    <string name="green_button">Green</string>
    <string name="navigation_menu.profile">Profile</string>
    <string name="navigation_menu.contacts">Contacts</string>
    <string name="navigation_menu.team">Team</string>
    <string name="navigation_menu.tasks">Tasks</string>
    <string name="navigation_menu.settings">Settings</string>
    <string name="fragment.contacts.description">My contacts</string>
    <string name="fullname">Nikolai Durasov</string>
    <string name="email">myemail@email.com</string>

    <string name="font_regular">sans-serif</string>
    <string name="font_medium">sans-serif-medium</string>
    <string name="vk_link">vk.com/nickdu</string>
    <string name="github_repository">github.com/NickduD/school-softdesign</string>
    <string name="rating">12</string>
    <string name="button.add_user">Add User</string>
    <string name="button.add_team">Add Team</string>
</resources>
